ecida/ecida-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ecida-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ecida
spec:
  host: transformer
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transformer-vs
spec:
  hosts:
  - "router"
  http:
  - route:
    - destination:
        host: transformer
        subset: v1
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "helloworldservice"
spec:
  hosts:
  - "*"
  gateways:
  - ecida-gateway
  http:
  - match:
    - uri:
        exact: /helloworld
    route:
    - destination:
        host: "transformer"
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "helloworldservice2"
spec:
  hosts:
  - "hoi"
  gateways:
  - ecida-gateway
  http:
  - match:
    - uri:
        exact: /helloworld
    route:
    - destination:
        host: "transformer"
        port:
          number: 3000
